--- a/app/app_monitoring/web/index.html
+++ b/app/app_monitoring/web/index.html
@@ -16,6 +16,12 @@
   -->
   <base href="$FLUTTER_BASE_HREF">
 
+  <meta property="og:title" content="moniramento">
+  <meta property="og:description" content="PI-VIII">
+  <meta property="og:image" content="web\favicon.png">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="ReB">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
